--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-  "builds": [],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
+  "build": {
+    "env": {
+      "PYTHON_VERSION": "3.9"
     }
-  ]
+  },
+  "installCommand": "python3 -m pip install -r requirements.txt",
+  "buildCommand": "streamlit run dashboard.py --server.port $PORT --server.address 0.0.0.0",
+  "outputDirectory": "."
 }
