Clean final setup for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,5 @@
     }
   },
   "installCommand": "python3 -m pip install -r requirements.txt",
-  "buildCommand": "streamlit run dashboard.py --server.port $PORT --server.address 0.0.0.0",
-  "outputDirectory": "."
+  "buildCommand": "streamlit run dashboard.py --server.port $PORT --server.address 0.0.0.0"
 }
